# bt_stack_win

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.c  main_usb.c
.github/workflows/: cmake-multi-platform.yml
FreeRTOS_Source/: CMakeLists.txt
